SubBt/force-app/main/default/objects/Punch_List__c/Punch_List__c.object-meta.xml
<CustomObject>
    <label>Punch List</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Punch List #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Punch Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>