SubBt/force-app/main/default/objects/Punch_List__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>Today() -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>