SubBt/force-app/main/default/objects/Punch_List__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>PL-{00000}</displayFormat>
    <inlineHelpText>This field has been deprecated.</inlineHelpText>
    <label>PLA #</label>
    <type>AutoNumber</type>
</CustomField>