SubBt/force-app/main/default/objects/Punch_List__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <formula>(Canceled_Punch_Lines__c / Total_Punch_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Cancelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>