SubBt/force-app/main/default/objects/Punch_List__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>(Completed_Punch_Lines__c / IF(Total_Punch_Lines__c=0,1,Total_Punch_Lines__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>