SubBt/force-app/main/default/objects/Punch_List__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>