SubBt/force-app/main/default/objects/Punch_List__c/fields/Est_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Completion_Date__c</fullName>
    <inlineHelpText>The estimated date the work should actually be completed.</inlineHelpText>
    <label>Est. Completion Date</label>
    <type>Date</type>
</CustomField>