SubBt/force-app/main/default/objects/Punch_List__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>This is the location of the issue.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Second Level Mechanical Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>