SubBt/force-app/main/default/objects/Punch_List__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <formula>(Open_Punch_Lines__c / Total_Punch_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>