SubBt/force-app/main/default/objects/Punch_List__c/fields/PL_Number__c.field-meta.xml
<CustomField>
    <fullName>PL_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&quot;-&quot;&amp;  Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL #</label>
    <type>Text</type>
</CustomField>