SubBt/force-app/main/default/objects/Punch_List__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Punch_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>