SubBt/force-app/main/default/objects/Punch_List__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <formula>(Scheduled_Punch_Lines__c / Total_Punch_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>