SubBt/force-app/main/default/objects/Punch_List__c/fields/Scheduled_Punch_Lines__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Punch_Lines__c</fullName>
    <label>Scheduled Punch Lines</label>
    <summaryFilterItems>
        <field>Punch_List_item__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Punch_List_item__c.Punch_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>