SubBt/force-app/main/default/objects/Punch_List__c/fields/Total_Punch_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Punch_Lines__c</fullName>
    <label>Total Punch Lines</label>
    <summaryForeignKey>Punch_List_item__c.Punch_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>