SubBt/force-app/main/default/objects/Punch_List__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Vendor Contact that is responsible for the work.</inlineHelpText>
    <label>Contractor Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Vendor_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Punch Lists</relationshipLabel>
    <relationshipName>Punch_Lists1</relationshipName>
    <type>Lookup</type>
</CustomField>