SubBt/force-app/main/default/objects/Punch_List__c/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <formula>(Working_Punch_Lines__c / Total_Punch_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Working</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>