SubBt/force-app/main/default/objects/Punch_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Vendor_Contact__c</columns>
    <columns>Location__c</columns>
    <columns>Project__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>